--- a/0_data_preparation.ipynb
+++ b/0_data_preparation.ipynb
@@ -173,7 +173,7 @@
     }
    ],
    "source": [
-    "df2017st_observations_query = \"SELECT block, obsdate, COUNT(*) as nb_observations, COUNT(DISTINCT observer) as nb_observers, COUNT(DISTINCT species) as nb_species \"\\\n",
+    "df2017st_observations_query = \"SELECT block, obsdate, dy.doy, dy.dow, dy.natholiday, COUNT(*) as nb_observations, COUNT(DISTINCT observer) as nb_observers, COUNT(DISTINCT species) as nb_species \"\\\n",
     "    \"FROM public.observation \"\\\n",
     "    \"WHERE latit != '0' \"\\\n",
     "    \"AND obsdate >= '2017-01-01' AND obsdate <= '2017-06-30' \"\\\n",
@@ -289,12 +289,12 @@
        "</div>"
       ],
       "text/plain": [
-       "      obsdate  block    precip   temper\n",
-       "0  2017-01-01     27  6.048740  1.50182\n",
-       "1  2017-01-02     27  0.460640  7.25872\n",
-       "2  2017-01-03     27  0.558334  6.31733\n",
-       "3  2017-01-04     27  1.106020  7.74568\n",
-       "4  2017-01-05     27  0.000000  5.50785"
+       "      obsdate  doy  dow  natholiday  block    precip   temper\n",
+       "0  2017-01-01    1    0        True     27  6.048740  1.50182\n",
+       "1  2017-01-02    2    1       False     27  0.460640  7.25872\n",
+       "2  2017-01-03    3    2       False     27  0.558334  6.31733\n",
+       "3  2017-01-04    4    3       False     27  1.106020  7.74568\n",
+       "4  2017-01-05    5    4       False     27  0.000000  5.50785"
       ]
      },
      "execution_count": 74,
@@ -321,7 +321,7 @@
     {
      "data": {
       "text/plain": [
-       "(7280892, 4)"
+       "(7280892, 7)"
       ]
      },
      "execution_count": 75,
@@ -1059,19 +1059,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   block     obsdate  nb_observations  nb_observers  nb_species    precip  \\\n",
-       "0     60  2017-02-05                1             1           1  0.235353   \n",
-       "1     61  2017-03-13                1             1           1  0.000000   \n",
-       "2     61  2017-06-08                7             1           7  4.093030   \n",
-       "3     62  2017-02-05                1             1           1  0.235353   \n",
-       "4     62  2017-02-25                2             2           1  0.585078   \n",
+       "   block     obsdate  nb_observations  nb_observers  nb_species  doy  dow  \\\n",
+       "0     60  2017-02-05                1             1           1   36    0   \n",
+       "1     61  2017-03-13                1             1           1   72    1   \n",
+       "2     61  2017-06-08                7             1           7  159    4   \n",
+       "3     62  2017-02-05                1             1           1   36    0   \n",
+       "4     62  2017-02-25                2             2           1   56    6   \n",
        "\n",
-       "     temper  \n",
-       "0   7.46328  \n",
-       "1  11.59240  \n",
-       "2  23.41180  \n",
-       "3   7.42724  \n",
-       "4   9.28602  "
+       "   natholiday    precip    temper  \n",
+       "0       False  0.235353   7.46328  \n",
+       "1       False  0.000000  11.59240  \n",
+       "2       False  4.093030  23.41180  \n",
+       "3       False  0.235353   7.42724  \n",
+       "4       False  0.585078   9.28602  "
       ]
      },
      "execution_count": 84,
@@ -1093,7 +1093,7 @@
     {
      "data": {
       "text/plain": [
-       "(536163, 7)"
+       "(536163, 10)"
       ]
      },
      "execution_count": 85,
@@ -1282,35 +1282,28 @@
        "</div>"
       ],
       "text/plain": [
-       "   block     obsdate  nb_observations  nb_observers  nb_species    precip  \\\n",
-       "0     62  2017-02-05                1             1           1  0.235353   \n",
-       "1     62  2017-02-25                2             2           1  0.585078   \n",
-       "2     62  2017-04-18                1             1           1  0.474744   \n",
-       "3     63  2017-01-21                5             1           4  0.000000   \n",
-       "4     63  2017-02-05                8             1           8  0.235353   \n",
+       "   block     obsdate  nb_observations  nb_observers  nb_species  doy  dow  \\\n",
+       "0     62  2017-02-05                1             1           1   36    0   \n",
+       "1     62  2017-02-25                2             2           1   56    6   \n",
+       "2     62  2017-04-18                1             1           1  108    2   \n",
+       "3     63  2017-01-21                5             1           4   21    6   \n",
+       "4     63  2017-02-05                8             1           8   36    0   \n",
        "\n",
-       "     temper  longit  latit                                               geom  \\\n",
-       "0   7.42724      15    369  010300002040710000010000000500000000000000004C...   \n",
-       "1   9.28602      15    369  010300002040710000010000000500000000000000004C...   \n",
-       "2  10.80520      15    369  010300002040710000010000000500000000000000004C...   \n",
-       "3   3.64525      15    370  010300002040710000010000000500000000000000004C...   \n",
-       "4   7.41745      15    370  010300002040710000010000000500000000000000004C...   \n",
+       "   natholiday    precip    temper  ...  aves2012_2016  pop001 pop009 pop025  \\\n",
+       "0       False  0.235353   7.42724  ...             13      30   1810   2070   \n",
+       "1       False  0.585078   9.28602  ...             13      30   1810   2070   \n",
+       "2       False  0.474744  10.80520  ...             13      30   1810   2070   \n",
+       "3       False  0.000000   3.64525  ...             66    1700   2035   2080   \n",
+       "4       False  0.235353   7.41745  ...             66    1700   2035   2080   \n",
        "\n",
-       "   ... aves2012_2016  pop001  pop009  pop025  pop049  pop081  pop121  pop169  \\\n",
-       "0  ...            13      30    1810    2070    2665    4025    5060    5330   \n",
-       "1  ...            13      30    1810    2070    2665    4025    5060    5330   \n",
-       "2  ...            13      30    1810    2070    2665    4025    5060    5330   \n",
-       "3  ...            66    1700    2035    2080    2200    4075    5120    5410   \n",
-       "4  ...            66    1700    2035    2080    2200    4075    5120    5410   \n",
+       "   pop049  pop081  pop121  pop169  pop225  roads_nowater_length  \n",
+       "0    2665    4025    5060    5330    7735           1844.323239  \n",
+       "1    2665    4025    5060    5330    7735           1844.323239  \n",
+       "2    2665    4025    5060    5330    7735           1844.323239  \n",
+       "3    2200    4075    5120    5410    8455          12193.064129  \n",
+       "4    2200    4075    5120    5410    8455          12193.064129  \n",
        "\n",
-       "   pop225  roads_nowater_length  \n",
-       "0    7735           1844.323239  \n",
-       "1    7735           1844.323239  \n",
-       "2    7735           1844.323239  \n",
-       "3    8455          12193.064129  \n",
-       "4    8455          12193.064129  \n",
-       "\n",
-       "[5 rows x 21 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
      "execution_count": 86,
